<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, lsgapp!</string>
    <string name="versionname">beta1fixed</string>
    <string name="app_name">LSGäpp</string>
    <string name="dark_actionbar">Dunkle ActionBar</string>
    <string name="showwithoutclass_off">Vertretungen ohne Klassen nicht angezeigt</string>
    <string name="showwithoutclass_on">Vertretungen ohne Klassen angezeigt</string>
    <string name="showonlywhitelist_off">Alle Vertretungen angezeigt</string>
    <string name="showonlywhitelist_on">Nur Vertretungen aus Whitelist angezeigt</string>
    <string name="on">An</string>
    <string name="off">Aus</string>
    <string name="useac2dm">Vertretungsplan pushen</string>
    <string name="useac2dm_on">Vertretungsplan wird auf dein Gerät gepusht</string>
    <string name="useac2dm_off">Vertretungsplan wird nicht gepusht</string>
    <string name="vplan_info">Info</string>
    <string name="ok">OK</string>
    <string name="select_class">Klasse auswählen:</string>
    <string name="select_teacher">Lehrer auswählen:</string>
    <string name="exam_not_complete">Bitte alle Felder ausfüllen, vor allem das Datum.</string>
    <string name="vplan">Vertretungsplan</string>
    <string name="vplan_short">Vertretungen</string>
    <string name="autopullvplan">Vertretungsplan im Hintergrund aktualisieren</string>
    <string name="autopull_intervall">Zeitintervall für die Aktualisierung (min)</string>
    <string name="updatevplanonstart">Vertretungsplan beim Appstart aktualisieren</string>
    <string name="min">Minuten</string>
    <string name="vplan_summary">Einstellungen für den Vertretungsplan</string>
    <string name="vplan_empty">Keine Vertretungen!</string>
    <string name="events">Termine</string>
    <string name="settings">Einstellungen</string>
    <string name="vplansettings">Vertretungsplan</string>
    <string name="push_vplan">Vertretungsplan pushen?</string>
    <string name="religion">Religionsunterricht</string>
    <string name="catholic">Katholisch</string>
    <string name="protestant">Evangelisch</string>
    <string name="ethics">Ethik</string>
    <string name="timetable">Stundenplan</string>
    <string name="gender">Geschlecht</string>
    <string name="male">Männlich</string>
    <string name="female">Weiblich</string>
    <string name="class_">Klasse</string>
    <string name="run_setup_assistant">Bitte den Setup-Assistenten ausführen!\nAndernfalls können leider nur Termine und die Startseite des SMVBlogs eingesehen werden.</string>
    <string name="setup_assistant_opening">Der Setup-Assistant wird ausgeführt.</string>
    <string name="setup_assistant">Setup-Assistent</string>
    <string name="setup_assistant_again">Den Setup-Assistenten nochmals ausführen</string>
    <string name="choose_lessons">Bitte die jeweils besuchte Stunde wählen:</string>
    <string name="subjectlist">Fächerübersicht</string>
    <string name="subjectlist_empty">Fächerübersicht leer</string>
    <string name="blacklist">Blacklist</string>
    <string name="blacklist_summary">Die Blacklist bearbeiten</string>
    <string name="whitelist">Whitelist</string>
    <string name="whitelist_summary">Die Whitelist bearbeiten</string>
    <string name="list_remove">Von Liste entfernen</string>
    <string name="refresh">Aktualisieren</string>
    <string name="noact">Keine Aktualisierung der Vertretungen notwendig</string>
    <string name="login">Zugangsdaten</string>
    <string name="login_summary">Benutzername &amp; Passwort für den Vertretungsplan</string>
    <string name="password">Passwort</string>
    <string name="username">Benutzername</string>
    <string name="at">bei</string>
    <string name="hour">Stunde</string>
    <string name="room">Raum</string>
    <string name="networkerror">Netzwerkfehler beim Abruf</string>
    <string name="jsonerror">Fehler beim Parsen der Daten</string>
    <string name="unknownerror">Unbekannter Fehler</string>
    <string name="loginerror">Login-Fehler\nBitte korrigieren Sie Benutzernamen und Passwort</string>
    <string name="loading_vplan">Lade Vertretungen&#8230;</string>
    <string name="loading_events">Lade Termine&#8230;</string>
    <string name="loading_timetable">Lade Stundenplan&#8230;</string>
    <string name="loading_data">Lade Daten&#8230;</string>
    <string name="downloading_update">Lade Update herunter</string>
    <string name="no_class"></string>
    <string name="showwithoutclass">Vertretungen ohne Klassenbezeichnung anzeigen</string>
    <string name="showonlywhitelist">Nur Vertretungen aus Whitelist anzeigen</string>
    <string name="excludesubject">Fach ausblenden</string>
    <string name="no_excludesubject">Fach nicht mehr ausblenden</string>
    <string name="really_exclude">Fach wirklich ausblenden? \n Kann in Einstellungen > Blacklist geändert werden</string>
    <string name="exclude_empty">Keine Fächer in der Blacklist</string>
    <string name="includesubject">Fach immer anzeigen</string>
    <string name="no_includesubject">Fach nicht immer anzeigen</string>
    <string name="really_include">Fach wirklich immer anzeigen? \n Kann in Einstellungen > Whitelist geändert werden</string>
    <string name="include_empty">Keine Fächer in der Whitelist</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="next">Weiter</string>
    <string name="previous">Zurück</string>
    <string name="login_setup">Login</string>
    <string name="classes">Klassen</string>
    <string name="no_classes">Ohne Klassenbezeichnung</string>
    <string name="vplan_mine">Meine Vertretungen</string>
    <string name="vplan_pupils">Schülervertretungen</string>
    <string name="vplan_teachers">Lehrervertretungen</string>
    <string name="smvblog">SMVBlog</string>
    <string name="update_available"><b>Update verfügbar</b></string>
    <string name="update_available_content">Neue Version der LSGäpp: </string>
    <string name="update_version">LSGäpp Version: </string>
    <string name="changelog">Changelog:</string>
    <string name="cancel">Abbruch</string>
    <string name="update">Update!</string>
    <string name="search">Suche&#8230;</string>
    <string name="info">Info zum Tag</string>
    <string name="about">Über</string>
    <string name="abouttext">Dies ist die Android-App für Schüler des LSG. \n
        Sie wurde von Maximilian Mühlbauer (scirocco101@gmail.com) und Paul Thiele (thielepaul@gmail.com) programmiert. \n
        Die Icons stammen von Dominik Philp (philp.dominik@gmail.com). \n
        Der Sourcecode ist auf GitHub zu finden: http://github.com/LSGAdmins/lsgapp \n
        Der Bugtracker ist auch auf GitHub: http://github.com/LSGAdmins/lsgapp/issues \n
        Wer keinen GitHub-Account hat, kann Wünsche, Kritik und Fehler an lsgadmins@googlegroups.com mailen.</string>
    <string name="vplan_mine_empty">Keine Vertretungen für mich!</string>
    <string name="events_empty">Keine Termine!</string>
    <string name="timetable_empty">Keine Stunden!</string>
    <string name="break_surveillance">Pausenaufsicht:</string>
    <string name="subjectlist_info">Lange drücken und halten, um Vertretungen bestimmter Fächer immer anzuzeigen / immer zu verbergen.</string>
    <string name="permissions">Berechtigungen</string>
    <string name="pupil">Schüler</string>
    <string name="pupils">Schüler</string>
    <string name="teacher">Lehrer</string>
    <string name="admin">Admin</string>
    <string name="teacher_short">Kürzel</string>
    <string name="select_short">Kürzel auswählen</string>
    <string name="vplan_num">Vertretungsanzahl&#160;&#160;&#160;&#160;</string>
    <string name="tasks">Aufgaben</string>
    <string name="exams">Schulaufgaben</string>
    <string name="newExam">Neue Schulaufgabe</string>
    <string name="editExam">Schulaufgabe bearbeiten</string>
    <string name="homework">Hausaufgaben</string>
    <string name="grades">Noten</string>
    <string name="date">Datum:</string>
    <string name="pick_date">Datum wählen</string>
    <string name="pick_subjects">Fach wählen</string>
    <string name="no_subject">Kein Fach</string>
    <string name="discard">Abbrechen</string>
    <string name="done">Fertig</string>
    <string name="other_subject">Anderes Fach</string>
    <string name="exam_type">Art der Arbeit</string>
    <string name="big_test">Schulaufgabe / Klausur</string>
    <string name="small_test">Kurzarbeit</string>
    <string name="other_test">Etwas Anderes</string>
    <string name="homebutton">Home-Button</string>
    <string name="searchbutton">Button zum Suchen</string>
    <string name="icon">Icon</string>
    <string name="vplan_of">Vertretungen von</string>
    <string name="change_user">Login-Daten</string>
    <string name="change_user_summary">Benutzernamen &amp; Passwort anpassen</string>
    <string name="change_time_table">Stundenplan</string>
    <string name="change_time_table_summary">Meinen Stundenplan anpassen</string>
    <string name="general">Allgemein</string>
    <string name="sendcrashes">Abstürze melden</string>
    <string name="general_settings">Allgemeine Einstellungen</string>
    <string name="general_summary">Allgemeine Einstellungen anpassen</string>
    <string name="check_login">Teste Login-Daten...</string>
    <string name="network_conn_req">Internet-Verbindung ist zum Setup erforderlich.</string>
    <string name="rerun_setup_assistant">Wollen Sie den Setup-Assistenten wirklich erneut ausführen?</string>
    <string name="homeasuphelp">Klicke auf das LSGäpp-Logo, um das Menü anzuzeigen.</string>
    <string name="swipehelp">Nach rechts und links wischen, um die Seiten zu wechseln</string>
    <string name="help">Hilfe</string>
    <string name="help_setupassistant_head">Setup-Assistent</string>
    <string name="help_setupassistant_content">Der Setup-Assistent führt dich durch die Einrichtung der LSGäpp.</string>
    <string name="help_timetable_head">Stundenplan</string>
    <string name="help_timetable_content">Hier kannst du deinen Stundenplan einsehen. Stunden mit Vertretungen werden dabei weiß unterlegt.</string>
    <string name="help_vplan_head">Vertretungsplan</string>
    <string name="help_vplan_content">Hier wird der Vertretungsplan angezeigt, auf der ersten Seite nur eure Vertretungen, auf der zweiten Seite alle.
        Die Anzeige von \"Meine Vertretungen\" könnt ihr durch die Black- und Whitelist verändern. Von allen Vertretungen, die ein Kontextmenü zeigen, könnt ihr die Fächer dort hinzufügen.
        Die Black- und Whitelist könnt ihr auch in den Einstellungen bearbeiten.</string>
    <string name="help_events_head">Termine</string>
    <string name="help_events_content">Hier könnt ihr euch die Termine anzeigen lassen, die sich auch auf der Homepage unter Termine befinden.
        Mit der Suchleiste könnt ihr die Termine filtern.</string>
    <string name="help_smvblog_head">SMVBlog</string>
    <string name="help_smvblog_content">Hier wird der SMV-Blog angezeigt. Wenn ihr in den Einstellungen euren Account angegeben habt,
        werdet ihr hier automatisch angemeldet.</string>
    <string name="help_settings_head">Einstellungen</string>
    <string name="help_settings_content">Hier könnt ihr das Verhalten der LSGäpp verändern. Die Änderung von Login-Daten und Details für den Stundenplan ruft automatisch die entsprechende
        Seite im Setup-Assistenten auf. Es gibt hier auch Einträge für die Black- und Whitelist.</string>
    <string name="help_bottom">	    Bei weiteren Fragen könnt ihr eine E-Mail an lsgadmins@googlegroups.com senden</string>

</resources>