<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="@string/vplan"
        android:title="@string/vplan" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showwithoutclass"
            android:title="@string/showwithoutclass" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="showonlywhitelist"
            android:title="@string/showonlywhitelist" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="useac2dm"
            android:title="@string/useac2dm" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="updatevplanonstart"
            android:title="@string/updatevplanonstart" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="autopullvplan"
            android:title="@string/autopullvplan" />

        <EditTextPreference
            android:defaultValue="30"
            android:hint="@string/min"
            android:inputType="number"
            android:key="autopull_intervall"
            android:title="@string/autopull_intervall" />
    </PreferenceCategory>

</PreferenceScreen>