<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@layout/background"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_setupassistant_head"
            android:textColor="@color/darkblue"
            android:textSize="26sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_setupassistant_content"
            android:textColor="@color/fontblack" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_timetable_head"
            android:textColor="@color/darkblue"
            android:textSize="26sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_timetable_content"
            android:textColor="@color/fontblack" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_vplan_head"
            android:textColor="@color/darkblue"
            android:textSize="26sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_vplan_content"
            android:textColor="@color/fontblack" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_events_head"
            android:textColor="@color/darkblue"
            android:textSize="26sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_events_content"
            android:textColor="@color/fontblack" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_smvblog_head"
            android:textColor="@color/darkblue"
            android:textSize="26sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_smvblog_content"
            android:textColor="@color/fontblack" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_settings_head"
            android:textColor="@color/darkblue"
            android:textSize="26sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_settings_content"
            android:textColor="@color/fontblack" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/help_bottom"
            android:textColor="@color/fontblack" />
    </LinearLayout>

</ScrollView>