<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:orientation="vertical" >
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/vplansettings"
        	android:textAppearance="?android:attr/textAppearanceLarge" />
    	<CheckBox
	        android:id="@+id/push_check"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/push_vplan"
        	android:checked="true" />
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/religion"
        	android:textAppearance="?android:attr/textAppearanceMedium" />
    	<RadioGroup
	        android:id="@+id/religiongroup"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dp" >
        	<RadioButton
	            android:id="@+id/catholic"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:checked="true"
            	android:text="@string/catholic" />
    	    <RadioButton
            	android:id="@+id/protestant"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/protestant" />
        	<RadioButton
	            android:id="@+id/ethics"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:checked="true"
            	android:text="@string/ethics" />
    	</RadioGroup>
    	<TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/gender"
        	android:textAppearance="?android:attr/textAppearanceMedium" />
	    <RadioGroup
        	android:id="@+id/gendergroup"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dp" >
        	<RadioButton
	            android:id="@+id/female"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:checked="true"
            	android:text="@string/female" />
        	<RadioButton
	            android:id="@+id/male"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/male" />
    	</RadioGroup>
	    <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/class_"
        	android:textAppearance="?android:attr/textAppearanceMedium" />
	    <RadioGroup
        	android:id="@+id/classgroup"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="10dp" >
    	</RadioGroup>
    	<LinearLayout
	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:layout_gravity="bottom" >
        	<Button
	            android:id="@+id/button2"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:text="@string/previous"
            	android:onClick="previous" />
        	<Button
	            android:id="@+id/button1"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:text="@string/next"
            	android:onClick="next" />
    	</LinearLayout>
	</LinearLayout>
</ScrollView>