<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lsgapp="http://schemas.android.com/apk/res-auto" >

    <!-- search -->
    <item
        android:id="@+id/search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        lsgapp:actionViewClass="android.support.v7.widget.SearchView"
        lsgapp:showAsAction="ifRoom|withText"/>
    <!-- refresh -->
    <item
        android:id="@+id/refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/refresh"
        lsgapp:showAsAction="ifRoom|withText"/>
    <!-- info -->
    <item
        android:id="@+id/info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/vplan_info"
        lsgapp:showAsAction="ifRoom|withText"/>
    <!-- subjectlist -->
    <item
        android:id="@+id/subjects"
        android:title="@string/subjectlist"/>

</menu>