<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:padding="10dp"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timetable"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_lessons"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <LinearLayout
            android:id="@+id/timetable_conflicts_placeholder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
        </LinearLayout>
        <LinearLayout
	        android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:layout_gravity="bottom" >
        	<Button
	            android:id="@+id/button2"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:text="@string/previous"
            	android:onClick="previous" />
        	<Button
	            android:id="@+id/button1"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:layout_weight="1"
            	android:text="@string/next"
            	android:onClick="next" />
    	</LinearLayout>
    </LinearLayout>
</ScrollView>
